<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstnameTextInput"
            style="@style/LoginSocialNetworkBtn"
            android:hint="@string/hint_enter_surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameTextInput"
            style="@style/LoginSocialNetworkBtn"
            android:hint="@string/hint_enter_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameFanEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="textPersonName|textCapSentences"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/birthDateTextView"
            style="@style/LoginSocialNetworkBtn"
            layout="@layout/view_date_picker"
            android:hint="@string/hint_birth_date" />

        <include
            android:id="@+id/startDateTextView"
            style="@style/LoginSocialNetworkBtn"
            layout="@layout/view_date_picker"
            android:hint="@string/hint_start_date" />

        <include
            android:id="@+id/endDateTextView"
            style="@style/LoginSocialNetworkBtn"
            layout="@layout/view_date_picker"
            android:hint="@string/hint_end_date" />

        <Button
            android:id="@+id/attachButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_background"
            android:text="@string/attach_file"
            android:textAllCaps="false"
            android:textColor="@drawable/ic_text_color_button" />

        <TextView
            android:id="@+id/fileAttachedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/new_file_added"
            android:textSize="18sp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_background"
            android:text="@string/user_add"
            android:textAllCaps="false"
            android:textColor="@drawable/ic_text_color_button" />


    </LinearLayout>
</ScrollView>